Mark nonstring use cases with __nonstring__ attribute.

* src/gcrypt.h.in (_GCRY_GCC_ATTR_NONSTRING): New.
* cipher/chacha20.c (chacha20_keysetup): Use _GCRY_GCC_ATTR_NONSTRING.
* cipher/cipher-gcm-siv.c (gcm_siv_selftest): Likewise.
* cipher/ecc.c (compute_keygrip): Likewise.
* cipher/serpent.c (serpent_test): Likewise.
* tests/basic.c (check_aes128_cbc_cts_cipher): Likewise.
(_check_gcm_cipher, check_gcm_siv_cipher): Likewise.
(check_ocb_cipher_largebuf_split, check_ocb_cipher_checksum): Likewise.
* tests/keygrip.c (key_grips): Likewise.

--

GnuPG-bug-id: 7617
Signed-off-by: NIIBE Yutaka <gniibe@fsij.org>